issue10622: fix superflous scrollbar on the right side of <pre> boxes in the generated html docs.  visible in chrome, possibly other webkit browsers.

--- a/Doc/tools/sphinxext/static/basic.css
+++ b/Doc/tools/sphinxext/static/basic.css
@@ -364,6 +364,7 @@ p.deprecated, p.deprecated-removed {
 
 pre {
     overflow: auto;
+    overflow-y: hidden;
 }
 
 td.linenos pre {
